--- a/src/CVRP.ipynb
+++ b/src/CVRP.ipynb
@@ -10,10 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2ff0a7cb-acdc-4e6b-81a7-0acb24c0ac18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Route for vehicle 0:\n",
+      " 0 -> 13 -> 12 -> 11 -> 15 -> 3 -> 4 -> 1 -> 7 -> 0\n",
+      "Distance of the route: 2352m\n",
+      "\n",
+      "Route for vehicle 1:\n",
+      " 0 -> 5 -> 8 -> 6 -> 2 -> 10 -> 16 -> 14 -> 9 -> 0\n",
+      "Distance of the route: 2352m\n",
+      "\n",
+      "Total distance of all routes: 4704m\n"
+     ]
+    }
+   ],
    "source": [
     "from ortools.constraint_solver import routing_enums_pb2\n",
     "from ortools.constraint_solver import pywrapcp\n",
